# Project-GestaoProcessual

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: __init__.py  default_config.py
app/Forms/: __init__.py
app/Forms/auth/: login.py
app/Forms/proc_adm/: __init__.py
app/Forms/proc_adm/defaults/: __init__.py
app/decorators/: __init__.py
app/misc/: __init__.py
app/models/: __init__.py  adm.py  users.py
app/routes/: __init__.py
app/routes/auth/: __init__.py
app/routes/auth/templates/: login.html
app/routes/clientes/: __init__.py
app/routes/dashboard/: __init__.py
app/routes/empresas/: __init__.py
app/routes/empresas/templates/: FormEmpresas.html  empresas.html
app/routes/partes/: __init__.py
app/routes/processos/: __init__.py
app/routes/processos/templates/: FormProc.html  processos.html
app/src/js/: DataTables.js
app/templates/: index.html
app/templates/include/: navbar.html  sidebar.html
configs/: __init__.py
